# std-span-talk

./: .gitignore  C133 - OS "Modern C++".bib  README.md  flake.nix  main.typ
examples/: CMakeLists.txt  array.cpp  c_array.cpp  dangling_span.cpp  info.cpp  iterator.cpp  main.cpp  mdspan.cpp  my_container.cpp  parallel.cpp  pointer_invalidation.cpp  simple_function.cpp  table.cpp  vector.cpp
src/: use_example  use_example.cpp
